--- a/media/less/general.less
+++ b/media/less/general.less
@@ -362,3 +362,10 @@ table.fbstat {
     float: left;
   }
 }
+
+.sermon-list-separator {
+  border: 0;
+  height: 4px;
+  background-color: white;
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0));
+}
