--- a/admin/forms/mediafile.xml
+++ b/admin/forms/mediafile.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
     <fieldset addfieldprefix="CWM\Component\Proclaim\Administrator\Field">
-        <field name="id" type="text" readonly="readonly" class="inputbox"/>
+        <field
+                name="id"
+                type="text"
+                class="readonly"
+                default="0"
+                readonly="true"
+        />
         <field name="createdate" type="calendar" label="JBS_CMN_CREATE_DATE"
                description="JBS_MED_CREATE_DATE_DESC"
                translateformat="true"
@@ -23,7 +29,7 @@
                id="published"
                label="JSTATUS"
                description="JFIELD_PUBLISHED_DESC"
-               class="chzn-color-state"
+               class="form-select-color-state"
                size="1"
                default="1"
                filter="intval">
@@ -33,15 +39,16 @@
             <option value="0">
                 JUNPUBLISHED
             </option>
+            <option value="2">
+                JARCHIVED
+            </option>
             <option value="-2">
                 JTRASHED
             </option>
         </field>
         <field name="language"
                type="contentlanguage"
-               label="JFIELD_LANGUAGE_LABEL"
-               description="JBS_CMN_SELECT_LANGUAGE_DESC"
-               class="chzn-color-state">
+               label="JFIELD_LANGUAGE_LABEL">
             <option value="*">JALL</option>
         </field>
         <field name="metadata" type="hidden" filter="unset"/>
@@ -50,8 +57,11 @@
                translate_label="false" class="inputbox" filter="rules" component="com_proclaim"
                section="mediafile" validate="rules"/>
         <field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL"
-               description="JFIELD_ACCESS_DESC"/>
-        <!--Server media specific fields-->
+               description="JFIELD_ACCESS_DESC"
+               filter="UINT"
+               validate="options"
+        />
+        <!--Server-media-specific fields-->
         <field name="params"/>
     </fieldset>
 </form>
