--- a/admin/forms/archive.xml
+++ b/admin/forms/archive.xml
@@ -6,7 +6,7 @@
                description="JBS_ARCHIVE_TIMEFRAME_DESC" size="5" labelclass="control-label" class="col-2"
                required="required">
         </field>
-        <field name="swich" type="radio" default="year"
+        <field name="switch" type="radio" default="year"
                label="JBS_ARCHIVE_SWICH_LABEL" description="JBS_ARCHIVE_SWICH_DESC"
                class="btn-group" labelclass="control-label">
             <option value="year">JBS_CMN_YEARS</option>
