--- a/site/forms/filter_cwmseriesdisplays.xml
+++ b/site/forms/filter_cwmseriesdisplays.xml
@@ -4,19 +4,19 @@
         <fields name="filter">
             <field
                     name="search"
+                    inputmode="search"
                     type="text"
-                    label="JBS_CMN_FILTER_SEARCH_DESC"
+                    label="COM_CONTENT_FILTER_SEARCH_DESC"
                     hint="JSEARCH_FILTER"
             />
-
-            <field name="se.tid"
-                   type="TeacherList"
-                   label="JBS_CMN_FILTERS_TEACHER"
-                   description="JBS_CMN_FILTERS_DESC"
-                   multiple="true"
-                   default="-1"
+            <field
+                    name="teacher"
+                    type="TeacherList"
+                    label="JBS_CMN_SELECT_TEACHER"
+                    description="JBS_CMN_SELECT_TEACHER_DESC"
+                    onchange="this.form.submit();"
             >
-                <option value="-1">JBS_CMN_SHOW_ALL</option>
+                <option value="">JBS_CMN_SELECT_TEACHER</option>
             </field>
             <field
                     name="language"
@@ -37,12 +37,12 @@
                 label="JBSM_CMN_LIST_FULL_ORDERING"
                 description="JBSM_CMN_LIST_FULL_ORDERING_DESC"
                 onchange="this.form.submit();"
-                default="se.text ASC"
+                default="se.series_text ASC"
                 validate="options"
         >
             <option value="">JBSM_GRID_SORT_BY</option>
-            <option value="se.text ASC">JBS_SER_SERIES_NAME_ASC</option>
-            <option value="se.text DESC">JBS_SER_SERIES_NAME_DESC</option>
+            <option value="se.series_text ASC">JBS_SER_SERIES_NAME_ASC</option>
+            <option value="se.series_text DESC">JBS_SER_SERIES_NAME_DESC</option>
         </field>
         <field
                 name="limit"
