Trying to fix problems with search and filters.

--- a/site/forms/filter_cwmseriesdisplays.xml
+++ b/site/forms/filter_cwmseriesdisplays.xml
@@ -52,6 +52,7 @@
                 label="COM_CONTENT_LIST_LIMIT"
                 description="COM_CONTENT_LIST_LIMIT_DESC"
                 onchange="this.form.submit();"
-        />
+        >
+        </field>
     </fields>
 </form>
